# site-pet-backend

./: .gitignore  .pre-commit-config.yaml  README.md  checklist.md  deploy.sh  main.py  mainTeste.py  package-lock.json  plano.txt  pyproject.toml  rotinas.py  start.sh  test_main.py
api/: ValidacaoCadastro.py  __init__.py  evento.py  petianos.py  usuario.py
app/controllers/: OperacoesEmail.py  evento.py  inscritosEvento.py  operacoesEmail.py  petianos.py  usuario.py  verification.py
app/model/: __init__.py  authTokenBD.py  evento.py  eventoBD.py  inscritosEventoBD.py  recuperarSenhaBD.py  teste.py  testeEventoBD.py  testeInscritoEvento.py  testeRecuperarSenha.py  usuario.py  usuarioBD.py
app/model/schema/: inscricaoEventoSchema.py
app/model/validator/: authToken.py  dadosEvento.py  evento.py  inscritosEvento.py  recuperarSenha.py  usuario.py
app/models/: __init__.py  evento.py  eventoBD.py  teste.py  testeEventoBD.py  usuario.py  usuarioBD.py
app/models/validator/: evento.py  usuario.py
app/schemas/: usuario.py
core/: ValidacaoCadastro.py  __init__.py  autenticacao.py  bd.py  config.py  criaPastas.py  enviarEmail.py  imagem.py  jwtoken.py  operacoesImagem.py  usuario.py
design/: auth.md  middlewares.md
src/: config.py  limiter.py  middleware.py  middlewareExcecao.py
src/autenticacao/: autenticacao.py  jwtoken.py
src/capacitacao/: controlador.py  rotas.py
src/email/: operacoesEmail.py
src/img/: criaPastas.py  operacoesImagem.py
src/middleware/: excecoes.py  logger.py  tamanhoLimite.py  tempoLimite.py
src/modelos/: bd.py  conexao.py  erros.py  excecao.py  exceptions.py
src/modelos/autenticacao/: autenticacao.py  autenticacaoClad.py  autenticacaoTokenBD.py  authToken.py
src/modelos/avaliacao/: avaliacao.py  avaliacaoClad.py
src/modelos/evento/: dadosEvento.py  enums.py  evento.py  eventoBD.py  eventoClad.py  eventoQuery.py  inscricaoEventoSchema.py  inscritosEvento.py  inscritosEventoBD.py  intervaloBusca.py  validacaoEvento.py
src/modelos/inscrito/: inscrito.py  inscrito1.py  inscritoClad.py
src/modelos/inscritos/: inscrito.py  inscritos.py
src/modelos/registro/: registro.py  registroLogin.py
src/modelos/usuario/: usuario.py  usuarioBD.py  usuarioClad.py  usuarioValidator.py  validacaoCadastro.py
src/recepcao/: controlador.py  rotas.py
src/rotas/avaliacao/: avaliacaoControlador.py  avaliacaoRotas.py
src/rotas/evento/: eventoClad.py  eventoControlador.py  eventoRotas.py  (+1 more)
teste/: usuario.py
testes/: usuario.py
(+17 files in other folders)
