[tool.poetry]
name = "site-pet-backend"
version = "0.1.0"
description = "Backend do website do PET-Informática."
authors = ["PET-Informática <pet@din.uem.br>"]
readme = "README.md"
packages = [
    {include = "src"}
]

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = {extras = ["standard"], version = "^0.32.1"}
fastapi = {extras = ["standard"], version = "^0.115.6"}
pillow = "^11.0.0"
pymongo = "^4.10.1"
passlib = {version = "^1.7.4", extras = ["argon2"]}
python-jose = {version = "^3.3.0", extras = ["cryptography"]}
email-validator = "^2.2.0"
python-multipart = "^0.0.19"
pydantic-settings = "^2.7.0"
apscheduler = "^3.11.0"
pypdf2 = "^3.0.1"
slowapi = "^0.1.9"
pdf2image = "^1.17.0"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
isort = "^5.13.2"
pytest = "^8.3.4"
httpx = "^0.28.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
